--- a/index.html
+++ b/index.html
@@ -6,6 +6,9 @@
     <title>Ecoleta</title>
 
     <link rel="stylesheet" href="/styles/main.css">
+    <link rel="stylesheet" href="/styles/home.css">
+    
+    <link rel="stylesheet" href="/styles/responsive.css">
 
 </head>
 <body>
