--- a/create-point.html
+++ b/create-point.html
@@ -17,7 +17,7 @@
     
             <header>
                 <img src="/assets/logo.svg" alt="logomarca">
-                <a href="http://google.com">
+                <a href="/">
                     <span></span>
                     Voltar para home
                 </a>    
@@ -34,24 +34,24 @@
 
                     <div class="field">
                         <label for="name">Nome da entidade</label>
-                        <input type="text" name="name">
+                        <input type="text" name="name" required>
                     </div>
 
                     <div class="field-group">
                         <div class="field">
                             <label for="address">Endereço</label>
-                            <input type="text" name="address">
+                            <input type="text" name="address" required>
                         </div>
                         <div class="field">
                             <label for="address2">Número/Complemento</label>
-                            <input type="text" name="address2">                            
+                            <input type="text" name="address2" required>                            
                         </div>
                     </div>
 
                     <div class="field-group">
                         <div class="field">
                             <label for="state">Estado</label>
-                            <select name="uf" >
+                            <select name="uf" required>
                                 <option value="">Selecione o estado</option>
                             </select>
 
@@ -59,11 +59,47 @@
                         </div>
                         <div class="field">
                             <label for="city">Cidade</label>
-                            <select name="city" disabled>
+                            <select name="city" disabled required>
                                 <option value="">Selecione a cidade</option>
                             </select>
                         </div>
                     </div>
+                </fieldset>
+
+                <fieldset>
+                    <legend>
+                        <h2>Ítens de coleta</h2>
+                    </legend>
+
+                    <div class="items-grid">
+                        <li data-id="1">
+                            <img src="/assets/lampadas.svg" alt="Lâmpadas">
+                                <spam>Lâmpadas</spam>
+                        </li>
+                        <li data-id="2">
+                            <img src="/assets/baterias.svg" alt="Pilhas e Baterias">
+                                <spam>Pilhas e Baterias</spam>
+                        </li>
+                        <li data-id="3">
+                            <img src="/assets/papeis-papelao.svg" alt="Papéis e Papelão">
+                                <spam>Papéis e Papelão</spam>
+                        </li>
+                        <li data-id="4">
+                            <img src="/assets/eletronicos.svg" alt="Resíduos Eletrônicps">
+                                <spam>Resíduos Eletrônicps</spam>
+                        </li>
+                        <li data-id="5">
+                            <img src="/assets/organicos.svg" alt="Resíduos Orgânicos">
+                                <spam>Resíduos Orgânicos</spam>
+                        </li>
+                        <li data-id="6">
+                            <img src="/assets/oleo.svg" alt="Óleo de Cozinha">
+                                <spam>Óleo de Cozinha</spam>
+                        </li>
+                    </div>
+
+                    <input type="hidden" name="items">
+
                 </fieldset>
 
                 <button type="submit"> Cadastrar ponto de coleta</button>
